--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
    <h2 class="alert alert-primary">Sign in with Google</h2>
-   <div class="g-signin2" data-onsuccess="onSignIn"></div>
+   <div class="g-signin2" data-redirecturi="https://pingu-893.github.io/web-dev/"></div>
    <div class="data">
      <p>Name</p>
      <p id="name" class="alert alert-success"></p>
